# hidapi

./: .appveyor.yml  .gitignore  .travis.yml  BUILD.autotools.md  BUILD.cmake.md  BUILD.md  CMakeLists.txt  HACKING.txt  Makefile.am  README.md  VERSION  annotated.html  classes.html  configure.ac  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_f69d011550147a977d318e3e9dc1c41f.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__API.html  hidapi.podspec  hidapi_8h.html  hidapi_8h_source.html  index.html  menudata.js  meson.build  meson_options.txt  modules.html  structhid__api__version.html  structhid__device__info.html  test_8c-example.html  topics.html
.builds/: alpine.yml  archlinux.yml  docs.yaml  fedora-mingw.yml  freebsd.yml  netbsd.yml  openbsd.yml
.github/: vmrun-libusb.sh
.github/workflows/: builds.yml  checks.yml  docs.yaml  libusb-vhid-test.yml  macos.yml  win-vhid-test.yml
cmake/: Doxyfile.in
core/: hidapi_input_ring.h
docs/: classes.html  dir_f69d011550147a977d318e3e9dc1c41f.html  files.html  globals_func.html  hidapi_8h_source.html  index.html  menudata.js  modules.html
docs/html/: annotated.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_type.html  group__API.html  hidapi_8h.html  index.html  structhid__device__info.html
docs/html/search/: all_0.js  all_3.js  all_5.js  all_7.js  all_8.js  classes_0.js  defines_0.js  groups_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_3.js  variables_5.js
docs/search/: files_0.js  functions_0.js  variables_1.js
doxygen/: Doxyfile  main_page.md
freebsd/: CMakeLists.txt  Makefile-manual  hid.c
hid_read_test/: CMakeLists.txt  main.cpp
hidapi/: hidapi.h
hidtest/: CMakeLists.txt  Makefile.am  hidtest.c  test.c
libusb/: CMakeLists.txt  Makefile-manual  Makefile.am  Makefile.freebsd  Makefile.haiku  Makefile.linux  hid.c  hidapi_input_ring.h  hidapi_libusb.h
libusb/test/: CMakeLists.txt  max_input_report_size_test.c
linux/: CMakeLists.txt  Makefile-manual  hid.c  libudev.c  seek7f00.sh  seek8000.sh
mac/: CMakeLists.txt  Makefile-manual  hid.c  hidapi_darwin.h  seek7f00.sh  seek8000.sh
netbsd/: CMakeLists.txt  hid.c
pp_data_dump/: .gitignore  CMakeLists.txt  pp_data_dump.c
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js
src/: CMakeLists.txt
src/cmake/: hidapi-config.cmake.in
src/tests/: CMakeLists.txt  README.md  test_device_io.c  test_platform.h  test_read_interrupt.c  test_virtual_device.h  test_virtual_device_mac.c  test_virtual_device_rawgadget.c  test_virtual_device_uhid.c  test_virtual_device_win.c
src/tests/windows/driver/: README.md  VhidminiUm.vcxproj  vhidmini.c  vhidmini.h
subprojects/hidapi_build_cmake/: CMakeLists.txt
testgui/: Makefile.am  copy_to_bundle.sh  mac_support.h  mac_support_cocoa.m  test.cpp
tests/: CMakeLists.txt  test_hidapi_input_ring.c
udev/: 69-hid.rules  99-hid.rules
windows/: CMakeLists.txt  Makefile.am  Makefile.mingw  hid.c  hid_report_descriptor_0_0_dev0.txt  hid_report_descriptor_0_0_dev1.txt  hid_report_descriptor_0_0_dev2.txt  hid_report_descriptor_0_0_dev3.txt  hidapi.vcproj  hidapi.vcxproj  hidapi.vcxproj.filters  hidapi_cfgmgr32.h  hidapi_descriptor_reconstruct.c  hidapi_descriptor_reconstruct.h  hidapi_hidsdi.h  hidapi_winapi.h  hidtest.vcxproj  hidtest.vcxproj.filters  idle.bat  light.bat  seek7f00.bat  seek8000.bat  seektest.bat  seekto.bat  stepto.bat
windows/ddk_build/: hidapi.def
windows/pp_data_dump/: CMakeLists.txt  README.md  pp_data_dump.c
windows/test/: 046A_0011_0006_0001.pp_data  046D_0A37_0001_000C.pp_data  046D_B010_0001_000C.pp_data  046D_B010_0001_FF00.pp_data  046D_B010_0002_0001.pp_data  046D_B010_0002_FF00.pp_data  046D_B010_0006_0001.pp_data  046D_C077_0002_0001.pp_data  046D_C283_0004_0001.pp_data  046D_C52F_0001_000C.pp_data  046D_C52F_0001_000C_expected.rpt_desc  046D_C52F_0001_000C_real.rpt_desc  046D_C52F_0001_FF00.pp_data  046D_C52F_0002_0001.pp_data  046D_C52F_0002_FF00.pp_data  046D_C534_0001_000C.pp_data  046D_C534_0001_FF00.pp_data  046D_C534_0002_0001.pp_data  046D_C534_0002_FF00.pp_data  046D_C534_0006_0001.pp_data  046D_C534_0080_0001.pp_data  047F_C056_0001_000C.pp_data  047F_C056_0003_FFA0.pp_data  17CC_1130_0000_FF01.pp_data  CMakeLists.txt  hid_report_reconstructor_test.c  offline_unit_test.c
windows/test/data/: 045E_02FF_0005_0001_expected.rpt_desc
winrt/: CMakeLists.txt  hid.cpp  hidapi_winrt.h
